...
    MaterialTheme(
        colorScheme = MaterialTheme.colorScheme.copy(
            onSurface = Black,
        )
    ) {
        DatePickerDialog(
            modifier = Modifier.semantics { contentDescription = "Date picker dialog" },
            onDismissRequest = onCancel,
            confirmButton = {
                Button(
                    onClick = { onAccept(state.selectedDateMillis) },
                ) {
                    Text("Accept")
...
